// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ブログ記事の 1 件取得 > 指定した id の記事 JSON が変わらないこと 1`] = `
{
  "content": "Nuxt 3 を使ったブログの構築手順についての記事です。
詳細な解説を含みます。",
  "created_at": "2024-01-10T10:00:00.000Z",
  "id": 1,
  "published_at": "2024-01-10T12:00:00.000Z",
  "title": "Nuxt 3 と TypeScript で作るブログ",
  "updated_at": "2024-01-10T10:00:00.000Z",
}
`;

exports[`ブログ記事の一覧取得 > 公開日時の降順で記事一覧の JSON が変わらないこと 1`] = `
[
  {
    "content": "Prisma Client と PostgreSQL を使った堅牢なデータモデル設計。",
    "created_at": "2024-03-20T14:00:00.000Z",
    "id": 3,
    "published_at": "2024-03-20T15:00:00.000Z",
    "title": "Prisma と PostgreSQL で構築するデータアクセス層",
    "updated_at": "2024-03-20T14:00:00.000Z",
  },
  {
    "content": "Tailwind CSS と SCSS を併用する際の構成と注意点についてまとめました。",
    "created_at": "2024-02-15T08:30:00.000Z",
    "id": 2,
    "published_at": "2024-02-15T09:00:00.000Z",
    "title": "Tailwind CSS と SCSS の併用パターン",
    "updated_at": "2024-02-15T08:30:00.000Z",
  },
  {
    "content": "Nuxt 3 を使ったブログの構築手順についての記事です。
詳細な解説を含みます。",
    "created_at": "2024-01-10T10:00:00.000Z",
    "id": 1,
    "published_at": "2024-01-10T12:00:00.000Z",
    "title": "Nuxt 3 と TypeScript で作るブログ",
    "updated_at": "2024-01-10T10:00:00.000Z",
  },
]
`;
